[package]
name = "plumtree"
version = "0.1.1"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "A Rust implementation of Plumtree algorithm"
homepage = "https://github.com/sile/plumtree"
repository = "https://github.com/sile/plumtree"
readme = "README.md"
license = "MIT"
categories = ["algorithms"]
edition = "2018"

[badges]
travis-ci = {repository = "sile/plumtree"}
codecov = {repository = "sile/plumtree"}

[dev-dependencies]
rand = "0.5"
