[package]
name = "plumtree"
version = "0.1.1"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "A Rust implementation of Plumtree algorithm"
homepage = "https://github.com/sile/plumtree"
repository = "https://github.com/sile/plumtree"
readme = "README.md"
license = "MIT"
categories = ["algorithms"]
edition = "2024"

[dev-dependencies]
rand = "0.9"
